--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Install pakkiges
 
-numpy>=1.21.0
-matplotlib>=3.5.0
-pandas>=1.4.0
-scipy>=1.8.0
+import numpy as np
+import matplotlib.pyplot as plt
+import pandas as pd
+from openpyxl import Workbook
+import scipy
