--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,7 @@
 installing pakkiges
 
-numpy>=1.21.0
-matplotlib>=3.5.0
+import numpy as np
+import matplotlib.pyplot as plt
+import pandas as pd
+from openpyxl import Workbook
+import scipy
